=== nautilus 2.1.0 ===

2002-09-27  Dave Camp  <dave@ximian.com>

	* src/nautilus-window-manage-views.c: #include
	<libnautilus-private/nautilus-theme.h>.
	* NEWS: Updated.

2002-09-27  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require eel 2.1.0, libgnomeui 2.1.0
	Bump version to 2.1.0

	* libnautilus-private/Makefile.am:
	* libnautilus-private/gnome-icon-lookup.[ch]:
	* libnautilus-private/gnome-thumbnail-pixbuf-utils.c:
	* libnautilus-private/gnome-thumbnail.[ch]:
	Removed. Moved to libgnomeui.
	
	* libnautilus-private/nautilus-icon-factory.[ch]:
	* libnautilus-private/nautilus-link-desktop-file.c:
	Update to new APIs.

2002-09-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-find-icon-image.c:
	* libnautilus-private/nautilus-find-icon-image.h:
	* libnautilus-private/nautilus-thumbnails-jpeg.c:
	* libnautilus-private/nautilus-thumbnails-jpeg.h:
	* libnautilus-private/nautilus-thumbnails.c:
	Remove unused files.

2002-09-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.[ch]:
	Update to new canvas
	use DITHER_NORMAL instead of DITHER_MAX for performance on non-24bit
	and remote.
	* libnautilus-private/nautilus-icon-container.[ch]:
	* libnautilus-private/nautilus-icon-dnd.[ch]:
	* libnautilus-private/nautilus-icon-private.h:
	Update to new canvas and rename widget.
	
	* src/nautilus-sidebar-title.c:
	Build fix.

2002-09-23  Dave Camp  <dave@ximian.com>

	* src/nautilus-side-pane.c: (switch_page_callback): Removed the
	current image indicator.
	(nautilus_side_pane_init), (nautilus_side_pane_destroy): Put a
	tooltip on the close button.
	(nautilus_side_pane_show_panel): New function.
	(shortcut_clicked_callback),
	(create_shortcut), (nautilus_side_pane_set_panel_image): Take a
	GdkPixbuf instead of a GtkImage.  Create a shortcut on the side
	pane for panels with images.
	* src/nautilus-side-pane.h: