@@ -1,3 +1,8 @@
+2002-09-30  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c (compute_text_rectangle):
+	Fix text rect zoom handling. Fixes redraw issues at 75%.
+
 === nautilus 2.1.0 ===
 
 2002-09-27  Dave Camp  <dave@ximian.com>
